src/test/deca/codegen/valid/created/testClass/selectionThis.deca
class MyClass {
    int x;
    int y=5;
    int getX() {
        return this.x;
        }
}