src/test/deca/codegen/invalid/created/testClass/noReturn.deca
class Q {
    float abs(float x) {
        if (x < 0.0) {
        return -x;
        }
    }
}

{
    Q q = new Q();
    q.abs(5.0);
}